--- a/config.json
+++ b/config.json
@@ -2,16 +2,16 @@
   "vars": {
     "@gray-base": "#000",
     "@gray-darker": "lighten(@gray-base, 13.5%)",
-    "@gray-dark": "lighten(@gray-base, 20%)",
-    "@gray": "lighten(@gray-base, 33.5%)",
-    "@gray-light": "lighten(@gray-base, 46.7%)",
-    "@gray-lighter": "lighten(@gray-base, 93.5%)",
-    "@brand-primary": "darken(#428bca, 6.5%)",
+    "@gray-dark": "#BA1E1A",
+    "@gray": "#BC8A78",
+    "@gray-light": "#B39886",
+    "@gray-lighter": "#DFB799",
+    "@brand-primary": "#B86255",
     "@brand-success": "#5cb85c",
     "@brand-info": "#5bc0de",
     "@brand-warning": "#f0ad4e",
     "@brand-danger": "#d9534f",
-    "@body-bg": "#fff",
+    "@body-bg": "#E4C1A0",
     "@text-color": "@gray-dark",
     "@link-color": "@brand-primary",
     "@link-hover-color": "darken(@link-color, 15%)",
@@ -61,7 +61,7 @@
     "@table-bg-accent": "#f9f9f9",
     "@table-bg-hover": "#f5f5f5",
     "@table-bg-active": "@table-bg-hover",
-    "@table-border-color": "#ddd",
+    "@table-border-color": "#BA1E1A",
     "@btn-font-weight": "normal",
     "@btn-default-color": "#333",
     "@btn-default-bg": "#fff",
@@ -163,7 +163,7 @@
     "@navbar-default-toggle-icon-bar-bg": "#888",
     "@navbar-default-toggle-border-color": "#ddd",
     "@navbar-inverse-color": "lighten(@gray-light, 15%)",
-    "@navbar-inverse-bg": "#222",
+    "@navbar-inverse-bg": "#5A5053",
     "@navbar-inverse-border": "darken(@navbar-inverse-bg, 10%)",
     "@navbar-inverse-link-color": "lighten(@gray-light, 15%)",
     "@navbar-inverse-link-hover-color": "#fff",
@@ -431,5 +431,5 @@
     "scrollspy.js",
     "transition.js"
   ],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=57274a3b62e0bac356f68b5d3ba9f3b5"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=6b80e5d4cc5750c2dafd065b95e028dd"
 }
